Fixed mobile overflow issue on main card component

--- a/budgetly/src/Components/UI/CardComponents/Card.module.css
+++ b/budgetly/src/Components/UI/CardComponents/Card.module.css
@@ -29,7 +29,8 @@
 @media (max-width: 800px) {
     .card {
         grid-template-columns: 1fr;
-        height: auto;
+        height: 100vh;
+: auto;
     }
      
 }
